# docling-serve

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  models_download.py  os-packages.txt  pyproject.toml  start_server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-poetry/: action.yml
.github/scripts/: release.sh
.github/workflows/: cd.yml  checks.yml  ci-images-dryrun.yml  ci.yml  images-dryrun.yml  images.yml  job-build.yml  job-checks.yml  job-image.yml  pypi.yml
docling_serve/: .env.example  __main__.py  app.py  chunk.py  docling_conversion.py  gradio_ui.py  helper_functions.py  response_preparation.py  settings.py  storage.py
docling_serve/datamodel/: callback.py  chunk_models.py  convert.py  engines.py  kfp.py  requests.py  responses.py  task.py  task_meta.py
docling_serve/engines/: __init__.py  async_orchestrator.py  async_orchestrator_factory.py  base_orchestrator.py
docling_serve/engines/async_kfp/: kfp_pipeline.py  notify.py  orchestrator.py
docling_serve/engines/async_local/: orchestrator.py  worker.py
docs/: README.md  configuration.md  deployment.md  development.md  pre-loading-models.md  usage.md
docs/deploy-examples/: compose-gpu.yaml  docling-model-cache-deployment.yaml  docling-model-cache-job.yaml  docling-model-cache-pvc.yaml  docling-serve-oauth.yaml  docling-serve-replicas-w-sticky-sessions.yaml  docling-serve-simple.yaml
tests/: test_1-file-all-outputs.py  test_1-file-async.py  test_1-url-all-outputs.py  test_1-url-async-ws.py  test_1-url-async.py  test_2-files-all-outputs.py  test_2-urls-all-outputs.py  test_2-urls-async-all-outputs.py  test_fastapi_endpoints.py  test_file_opts.py  test_options_serialization.py  test_results_clear.py
